working javalin login service

--- a/services/gateway/bookinfo-gateway-mcg.yaml
+++ b/services/gateway/bookinfo-gateway-mcg.yaml
@@ -43,3 +43,9 @@ spec:
     route:
     - destination:
         host: profile
+  - match:
+    - uri:
+        prefix: /royal/api/login
+    route:
+    - destination:
+        host: login
