--- a/services/login/pom.xml
+++ b/services/login/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.25</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.6</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
